--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
     <ul id="shoppinglist">
 
     </ul>
-    <button onclick="buttonclicked()">buttonClicked</button>
+    <button id="button1">buttonClicked</button>
 </body>
-    <script src="./index.js"></script>
+    <script src="../dist/bundle.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script> -->
 </html>
