--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <ul id="shoppinglist">
 
     </ul>
-    <button id="button1">buttonClicked</button>
+    <button id="button1" class="button">buttonClicked</button>
 </body>
     <script src="../dist/bundle.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script> -->
