--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <img id="logo">
     <h1 id="header">hey this is my first web pack application</h1>
     <ul id="shoppinglist">
 
